<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_upload"
        tools:context=".UploadActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/upload_root">

            <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp">

                        <TextView
                                android:text="@string/name_pic_link"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                />

                        <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                            <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textUri"
                                    android:ems="10"
                                    android:id="@+id/pic_link"
                                    android:layout_weight="1"
                                    android:hint="@string/name_pic_link"
                                    android:labelFor="@id/pic_sub"
                                    android:importantForAutofill="no"
                                    tools:targetApi="o"/>

                            <Button
                                    android:text="@string/name_upload"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/pic_upload_pic"
                                    android:layout_weight="3"/>
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp">

                        <TextView
                                android:text="@string/name_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"/>

                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:ems="10"
                                android:id="@+id/pic_title"
                                android:autofillHints=""
                                tools:targetApi="o"
                                android:hint="@string/name_title"
                                android:labelFor="@id/pic_sub"/>
                    </LinearLayout>

                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp">

                        <TextView
                                android:text="@string/name_sort"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"/>

                        <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:id="@+id/pic_sort"
                                android:labelFor="@id/pic_sub"
                                android:checkedButton="@id/pic_sort_photo">

                            <RadioButton
                                    android:text="@string/sort_phone_photo"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/pic_sort_photo"
                                    android:layout_weight="1"/>

                            <RadioButton
                                    android:text="@string/sort_phone_acg"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/pic_sort_acg"
                                    android:layout_weight="1"/>

                            <RadioButton
                                    android:text="@string/sort_computer_wallpaper"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/pic_sort_wallpaper"
                                    android:layout_weight="1"/>
                        </RadioGroup>

                    </LinearLayout>

                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp">

                        <TextView
                                android:text="@string/name_content"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"/>

                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textLongMessage|textMultiLine|text"
                                android:ems="10"
                                android:importantForAutofill="no"
                                tools:targetApi="o"
                                android:hint="@string/name_content"
                                android:labelFor="@id/pic_sub"
                                android:id="@+id/pic_content"
                                android:minLines="3"
                                android:gravity="start|top"
                                android:maxLines="10"/>
                    </LinearLayout>

                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp">

                        <TextView
                                android:text="@string/name_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"/>

                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:importantForAutofill="no"
                                tools:targetApi="o"
                                android:labelFor="@id/pic_sub"
                                android:hint="@string/name_username"
                                android:inputType="text"
                                android:id="@+id/pic_username"/>
                    </LinearLayout>

                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp">

                        <TextView
                                android:text="@string/name_receipt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"/>

                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textWebEmailAddress"
                                android:ems="10"
                                android:importantForAutofill="no"
                                tools:targetApi="o"
                                android:hint="@string/name_receipt"
                                android:labelFor="@id/pic_sub"
                                android:id="@+id/pic_mailbox"/>
                    </LinearLayout>

                    <Button
                            android:text="@string/name_sub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/pic_sub"/>

                </LinearLayout>

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:id="@+id/pic"
                    android:scaleType="fitCenter"/>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>