<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        tools:showIn="@layout/content_detail">

    <LinearLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:padding="8dp">

        <TextView
                android:id="@+id/pic_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textIsSelectable="true"
                android:textSize="30sp" />

        <TextView
                android:id="@+id/pic_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textIsSelectable="true"
                android:textSize="12sp" />

        <TextView
                android:id="@+id/pic_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:textColor="@android:color/white"
                android:textColorLink="@color/design_default_color_primary"
                android:textIsSelectable="true"
                android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

        <LinearLayout
                android:id="@+id/show_archive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center|start"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:baselineAlignBottom="false"
                    android:contentDescription="@string/title_archive"
                    app:srcCompat="@drawable/ic_archive_black_24dp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_archive"
                    android:textColor="@color/text_color" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/show_setWallpaper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center|start"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/action_set"
                    app:srcCompat="@drawable/ic_wallpaper_black_24dp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_set"
                    android:textColor="@color/text_color"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/show_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center|start"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/action_download"
                    app:srcCompat="@drawable/ic_file_download_black_24dp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_download"
                    android:textColor="@color/text_color"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/show_share"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:gravity="center|start"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:baselineAlignBottom="false"
                    android:contentDescription="@string/title_archive"
                    app:srcCompat="@drawable/ic_share_black_24dp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_share"
                    android:textColor="@color/text_color"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/show_copy_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center|start"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:baselineAlignBottom="false"
                    android:contentDescription="@string/title_archive"
                    app:srcCompat="@drawable/ic_insert_link_black_24dp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_copy_link"
                    android:textColor="@color/text_color"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/show_browser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center|start"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:baselineAlignBottom="false"
                    android:contentDescription="@string/title_archive"
                    app:srcCompat="@drawable/ic_open_in_browser_black_24dp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_open_in_browser"
                    android:textColor="@color/text_color"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>